Revert "Fixed gaps between Gallery blocks to be consistent with images"
This reverts commit af439ffd2f65c1df2b73aa5192cce50e417e10f9.

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ GitHub Theme URI: https://github.com/FlauntSites/padang-padang
 Author: Flaunt Sites
 Author URI: http://flauntsites.com
 Description: Designed to match the power and simplicity of one of Bali’s cleanest barreling waves. Drop in… Race through the tube… Get shot out in glory.
-Version: 0.7.3
+Version: 0.7.2
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: padang-padang
@@ -1718,12 +1718,6 @@ CAPTION AND SHAREBAR STYLES
   text-align: initial;
   font-size: initial;
   background: initial; }
-
-ul.wp-block-gallery {
-  margin: 0; }
-
-.wp-block-gallery .blocks-gallery-item {
-  margin: 0 0 5px 0; }
 
 .fs-drawer-mobile-more {
   width: 30px;
